chore: refactory project entrypoints (#15)
* chore: refactory project entrypoints

chore: abstract http handler

chore: abstract logging interface

* chore: move database from /internal

* fix: fix Dockerfile

* chore: fix tests

* chore: remove graphql empty file
