# internal/api/fiber/docs/swagger.json
@@ -1,20 +1,11 @@
-// Package docs GENERATED BY SWAG; DO NOT EDIT
-// This file was generated by swaggo/swag
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "API para o cadastro de produtos, controle de vendas e fluxo de caixa para a sorveteria três estrelas",
+        "title": "Sorveteria três estrelas - API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
     "paths": {
         "/auth/login": {
             "post": {
@@ -133,7 +124,7 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/balances.Balance"
+                                "$ref": "#/definitions/balances.CashFlow"
                             }
                         }
                     },
@@ -581,6 +572,26 @@ const docTemplate = `{
                 }
             }
         },
+        "balances.CashFlow": {
+            "type": "object",
+            "properties": {
+                "balances": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/balances.Balance"
+                    }
+                },
+                "payments": {
+                    "type": "number"
+                },
+                "sales": {
+                    "type": "number"
+                },
+                "total": {
+                    "type": "number"
+                }
+            }
+        },
         "dto.CreateProductPayload": {
             "type": "object",
             "properties": {
@@ -774,20 +785,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "",
-	BasePath:         "",
-	Schemes:          []string{},
-	Title:            "Sorveteria três estrelas - API",
-	Description:      "API para o cadastro de produtos, controle de vendas e fluxo de caixa para a sorveteria três estrelas",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
